Adds feature to mine a block in another thread.
