# lib/server/index.js
@@ -168,11 +168,22 @@ class HttpServer {
             res.status(201).send(newPeer);
         });
 
-        app.post('/miner/mine', (req, res) => {
-            // TODO: This should be called on another thread.
+        app.post('/miner/mine', (req, res) => {            
             const newBlock = miner.mine(req.body.rewardAddress);
             blockchain.addBlock(newBlock);
             res.status(201).send(newBlock);
+        });
+
+        app.post('/miner/mineInAnotherThread', (req, res, next) => {
+            miner.mineInAnotherThread(req.body.rewardAddress)
+                .then((newBlock) => {
+                    newBlock = Block.fromJson(newBlock);
+                    blockchain.addBlock(newBlock);
+                    res.status(201).send(newBlock);
+                })
+                .catch((ex) => {
+                    next(ex);
+                });
         });
 
         app.use(function (err, req, res, next) {
