# lib/server/swagger.json
@@ -165,7 +165,7 @@
                 ],
                 "summary": "Create a transaction",
                 "description": "",
-                "parameters": [                    
+                "parameters": [
                     {
                         "in": "body",
                         "name": "body",
@@ -220,7 +220,7 @@
                     }
                 }
             }
-        },        
+        },
         "/operator/wallets": {
             "get": {
                 "tags": [
@@ -509,6 +509,40 @@
                 ],
                 "summary": "Mine a new block",
                 "description": "Mine a new block and add it to the end of blockchain.",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "Mine request",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "rewardAddress": {
+                                    "description": "Address to reward",
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/Block"
+                        }
+                    }
+                }
+            }
+        },
+        "/miner/mineInAnotherThread": {
+            "post": {
+                "tags": [
+                    "miner"
+                ],
+                "summary": "Mine a new block (in another thread)",
+                "description": "Mine a new block (in another thread) and add it to the end of blockchain.",
                 "parameters": [
                     {
                         "in": "body",
